--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🔐</text></svg>" />
-    <title>Web3 Login</title>
+    <link rel="icon" type="image/svg+xml" href="/src/blinc-icon.svg" />
+    <title>Blinc Web3 Login</title>
   </head>
   <body>
     <div id="root"></div>
